// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context transforms correctly using "context-0" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    context: path.resolve(__dirname, \\"app\\")
}
"
`;

exports[`context transforms correctly using "context-1" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    context: './some/fake/path'
}
"
`;

exports[`context transforms correctly using "context-2" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    context: contextVariable
}
"
`;
